- Moved to a different XMB category (now under Network)
- Fixed another possible memory leak
- Added more flash mount points to detect
- Changed LIST format again
- New algorithms and methods
- Should support Remote Play
- Code optimizations for better performance and reliability
- Better, more efficient and reliable way of getting the IP (no inet needed - thanks andoma)
- New git: http://git-hacks.com/openps3ftp

[Version 1.5 - March 4, 2011]
- Improved performance and stability
- In-game XMB performance increased
- Better syscall usage
- Fixed a possible memory leak
- Fixed a couple of bugs
- Added support for commands: MDTM, ABOR
- nopass: now does normal login procedure (to ensure compatibility) but ignores password value
- Added new build.sh file for developers (creates nopass and normal versions)

[Version 1.4 - February 26, 2011]
- Added more return codes
- Another new command parser (even better)
- Moved IP retrieval function to its own thread (no more hanging; method still requires internet)
- Now detects all known dev_flash writable mount points
- Rewrote/reengineered alot of functions
- Added a little more user-friendly information on the screen
- Moved PASSWD and EXITAPP commands under SITE-specific commands (see SITE HELP)
- Changed LIST format to somewhat match "ls -a -l"
- Greatly shortened code
- Improved performance and stability
- Fixed some bugs
- More FTP client compatibility

[Version 1.3 - February 15, 2011]
- New command parser
- New readme format
- Prints a warning message if dev_blind is mounted
- Fixed a bunch of bugs
- Much more stable compared to previous versions
- Much better performance compared to previous versions
- On-screen text is coloured green instead of white
- File transfers are more reliable
- Exit to XMB function is more reliable
- Removed "Press X to quit", use XMB Quit Game
- Corrected and added some FTP return codes
- Local IP address of the PS3 now displays on-screen